# chess_engine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  main.cpp
engine/include/: BitArrayChess.hpp  Chess.hpp  ChessNotation.hpp  Commons.hpp  GuiController.hpp  SimpleArrayChess.hpp
engine/src/: CMakeLists.txt  ChessNotation.cpp  Commons.cpp  GuiController.cpp  SimpleArrayChess.cpp
include/: BitArrayChess.hpp  Chess.hpp  Commons.hpp  GuiController.hpp  SimpleArrayChess.hpp  Utils.hpp
src/: GuiController.cpp  SimpleArrayChess.cpp  main.cpp
tests/: CMakeLists.txt  SimpleArrayChessTests.cpp
